# SAK

./: Cargo.toml
src/: encode.rs  error.rs  json.rs  main.rs
test_files/: example.json  minified.json
